1 — Fix bug   Fix multiply returning null for empty potential list
  An empty list should return the multiplicative identity (1.0),
  consistent with sum returning 0.0 for empty lists.

  ---
  2 — Redundance
  Remove redundant zero-initializations in TablePotentialArithmetic

  Java initializes int arrays to 0 by default, making the explicit
  assignment in initializeCoordinates dead code. Also replaced a manual
  for loop in divide with the existing initializeToZero helper.

  ---
  3 — Redundance
  Avoid recomputing dimensions in evaluateFunctionPotential

  The dimensions array was calculated twice from the same resultVariables.
  Reuse resultDimension instead of calling calculateDimensions again.

  ---
  4 — Javadoc
  Fix misleading @return in findFirstPotentialWithInterventions